# sinclair_cambridge

./: Cargo.toml  index.htm
pkg/: README.md  package.json  ti.d.ts  ti.js  ti_bg.wasm  ti_bg.wasm.d.ts
src/: display.rs  keyboard.rs  lib.rs  rom.rs  side_panel.rs
